--- a/index.html
+++ b/index.html
@@ -5,3 +5,8 @@
 <body>
 <h1><center>Boards Dynamic Problem Set</center></h1>
 <br>
+  <h2><a href="USMLE.html"> USMLE </a href></h2>
+<br>
+  <h2><a href="COMLEX.html"> COMLEX </a href></h2>
+  </body>
+</html>
