--- a/PBL.html
+++ b/PBL.html
@@ -3,7 +3,7 @@
 <title>Practice-Based Learning and Improvement in Osteopathic Medical Practice</title>
 </head>
 <body>
-<h1>Practice-Based Learning and Improvement in Osteopathic Medical Practice</h1>
+<h1><center>Practice-Based Learning and Improvement in Osteopathic Medical Practice<center></h1>
 <br>
 <h2> Fundamental Epidemiologic Concepts </h2>
 <br>
