--- a/ICSPOM.html
+++ b/ICSPOM.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Interpersonal and Communication Skills in Practice of Osteopathic Medicine</title>
+<title><center>Interpersonal and Communication Skills in Practice of Osteopathic Medicine<center></title>
 </head>
 <body>
 <h1>Interpersonal and Communication Skills in Practice of Osteopathic Medicine</h1>
