--- a/AKOMP.html
+++ b/AKOMP.html
@@ -3,7 +3,7 @@
 <title>Application of Knowledge for Osteopathic Medical Practice</title>
 </head>
 <body>
-<h1> Application of Knowledge for Osteopathic Medical Practice</h1>
+<h1><center>Application of Knowledge for Osteopathic Medical Practice<center></h1>
 <br>
 <h2>Foundational Biomedical Sciences</h2>
 <br>
