--- a/development.html
+++ b/development.html
@@ -5,33 +5,33 @@
 <body>
 <h1><center>Human Developent, Reproduction, and Sexuality</center></h1>
 <br>
-<h2>Normal Sexual Development, Abnormalities, and Delays of Sexual Maturation</h2>
+Normal Sexual Development, Abnormalities, and Delays of Sexual Maturation
 <br>
-<h2>Aging Milestones</h2>
+Aging Milestones
 <br>
-<h2>Developmental Delay</h2>
+Developmental Delay
 <br>
-<h2>Congenital Anomalies, Malformations, Primary and Acquired Immunodeficiency Disorders</h2>
+Congenital Anomalies, Malformations, Primary and Acquired Immunodeficiency Disorders
 <br>
-<h2>Failure to Thrive</h2>
+Failure to Thrive
 <br>
-<h2>Infertility</h2>
+Infertility
 <br>
-<h2>Pregnancy Prevention and Contraception</h2>
+Pregnancy Prevention and Contraception
 <br>
-<h2>Normal Obstetrics, Labor and Delivery</h2>
+Normal Obstetrics, Labor and Delivery
 <br>
-<h2>Pregnancy Complications</h2>
+Pregnancy Complications
 <br>
-<h2>Pregnancy Loss</h2>
+Pregnancy Loss
 <br>
-<h2>Neonatal Conditions</h2>
+Neonatal Conditions
 <br>
-<h2>Impairment of Sexual Function</h2>
+Impairment of Sexual Function
 <br>
-<h2>Physical Exam Findings Related to Human Development, Reproduction, and Sexuality</h2>
+Physical Exam Findings Related to Human Development, Reproduction, and Sexuality
 <br>
-<h2>Laboratory Test Findings and Diagnostic Imaging Related to Human Development, Reproduction, and Sexuality<h2>
+Laboratory Test Findings and Diagnostic Imaging Related to Human Development, Reproduction, and Sexuality
 <br>
 </body>
 </html>
