--- a/development.html
+++ b/development.html
@@ -3,7 +3,7 @@
 <title>Human Development, Reproduction, and Sexuality</title>
 </head>
 <body>
-<h1><center>Human Developent, Reproduction, and Sexuality</center></h1>
+<h1><center>Human Development, Reproduction, and Sexuality</center></h1>
 <br>
 Normal Sexual Development, Abnormalities, and Delays of Sexual Maturation
 <br>
