--- a/OPPMT.html
+++ b/OPPMT.html
@@ -11,5 +11,21 @@
 <br>
 <h2> Integration of Osteopathic Principles, Practice, and OMT Into Care </h2>
 <br>
+  An L5 RLSL Somatic dysfunction would most likely be associated with which of the following sacral somatic dysfunctions?
+<br>
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Right unilateral sacral extension </label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Left unilateral sacral flexion</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C.Right on right sacral torsion </label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Left on right sacral torsion</label><br>
+  <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Right on left sacral torsion</label><br>
+</form> 
+Answer: <p style="color:white">E. Right on left sacral torsion. L5 rotates in the opposite direction as the sacrum, so L5 rotated to the left indicates the sacrum is rotated to the right.</p>
+</form> 
 </body>
 </html>
