--- a/OPPMT.html
+++ b/OPPMT.html
@@ -26,6 +26,25 @@
   <label for="other"> E. Right on left sacral torsion</label><br>
 </form> 
 Answer: <p style="color:white">E. Right on left sacral torsion. L5 rotates in the opposite direction as the sacrum, so L5 rotated to the left indicates the sacrum is rotated to the right.</p>
+<br>
+  A 64 year old female patient presents to your office with pain in the lower back. She was gardening over the weekend when the pain became worse. Physical exam findings: Landmarks are Sacral sulcus- right shallow and ILA- left anterior/superior. Motion testing: Sphinx test- positive. Which of the following best describes the muscle energy treatment utilized to normalize this dysfunction?  
+  <br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Flex the hips to greater than 90 degree </label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Apply anterior pressure to sacral base</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Flex the hips to less than 90 degrees</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D.  Apply anterior pressure to sacral apex</label><br>
+  <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Push anterior and inferior on the sacral base</label><br>
+  <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> Answer: C. Flex the hips to less than 90 degrees. For non-neutral sacral torsions, the patient is prone, knees bent so that side of oblique axis is closest to table. The knees will be greater than 90 degrees (knees further from chest), while the patient lifts their ankles toward the ceiling.
+  
 </form> 
 </body>
 </html>
