--- a/blood.html
+++ b/blood.html
@@ -29,5 +29,19 @@ Physical Exam Findings Related to the Circulatory and Hematologic Systems
 <br>
 Laboratory Test Findings and Diagnostic Imaging Related to the Circulatory and Hematologic Systems
 <br>
+  Which of the following segments of an EKG can remain abnormal weeks to months after an acute myocardial infarction?
+  <br>
+ <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Q </label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. P</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. T</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. ST</label><br>
+</form> 
+Answer: <p style="color:white">A - In an acute myocardial infarction, the EKG changes over time. The initial changes are shown in ST segment elevation, which decreases over time to appear normal again. Weeks to months after an acute myocardial infarction, the Q wave can stay decreased. In the same time frame, the P and T waves tend to go back to an almost near normal quality.<br>
+<br> 
 </body>
 </html>
