--- a/OPCPS.html
+++ b/OPCPS.html
@@ -9,9 +9,22 @@
 <br>
 <h2>Differential Diagnosis</h2>
 <br>
-<h2>Essential Clinical Procedurals</h2>
+<h2>Essential Clinical Procedures</h2>
 <br>
-<h2>Patient Care Management</h2>
+  In order to function in the environment, the body makes changes to its center of mass. What are these changes referred to as?<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Chiropractic adjustments</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Postural adjustments </label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Spinal adjustments</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Sensory-motor adjustments</label><br>
+</form> 
+Answer: <p style ="color:white"> B - The term that refers to the body’s ability to change its center of mass to function in the environment is known as postural adjustments. These adjustments occur several times a day as we go about our lives. They require a complex coordination of events that the human mind is only slightly aware of as it happens. For example, very few think about what is going on inside the muscles of our body as we reach for a dish on a shelf.<br>
+<br>
+  <h2>Patient Care Management</h2>
 <br>
 <h2>Patient Education</h2>
 <br>
