--- a/blood.html
+++ b/blood.html
@@ -7,6 +7,19 @@
 <br>
 Cardiovascular Chest Pain
 <Br>
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Occasionally, symptoms appear to come and go and not last more than an hour. </label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. He seems to have symptoms constantly and this is the reason that he came back to the doctor.</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. He is currently in treatment for atrial fibrillation and it is under control.</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. None of the above.</label><br>
+</form> 
+Answer: <p style="color:white">A - In medicine, when a condition is noted as paroxysmal, it means that the condition is not constant and that it occurs occasionally with symptoms that come and go and tend to not last that long. The symptoms and condition may resolve themselves without medical intervention. Medical intervention can shorten the symptoms and/or decrease the amount of times the symptoms occur.</p>
+  <br>
+  <br>
 Palpitations/Rhythm Disturbances
 <br>
 Edema and Swelling
