--- a/respiratory.html
+++ b/respiratory.html
@@ -28,5 +28,16 @@ Respiratory Growths and Malformations
 Physical Exam Findings Related to the Respiratory System
 <br>
 Laboratory Test Findings and Diagnostic Imaging Related to the Respiratory System <br>
+   <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A.  </label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. </label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. </label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. </label><br>
+</form> 
+  Answer: <p style="color:white"></p>
 </body>
 </html>
