--- a/development.html
+++ b/development.html
@@ -5,21 +5,34 @@
 <body>
 <h1><center>Human Development, Reproduction, and Sexuality</center></h1>
 <br>
-Normal Sexual Development, Abnormalities, and Delays of Sexual Maturation
+<b>Normal Sexual Development, Abnormalities, and Delays of Sexual Maturation</b>
 <br>
-Aging Milestones
+<b>Aging Milestones</b>
 <br>
-Developmental Delay
+
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. </label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. </label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. </label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. </label><br>
+</form> 
+Answer: <p style="color:white"> </p>
+  <br>
+  <b>Developmental Delay</b>
 <br>
-Congenital Anomalies, Malformations, Primary and Acquired Immunodeficiency Disorders
+  <b>Congenital Anomalies, Malformations, Primary and Acquired Immunodeficiency Disorders</b>
 <br>
-Failure to Thrive
+  <b>Failure to Thrive</b>
 <br>
-Infertility
+  <b>Infertility</b>
 <br>
-Pregnancy Prevention and Contraception
+  <b>Pregnancy Prevention and Contraception</b>
 <br>
-Normal Obstetrics, Labor and Delivery
+  <b>Normal Obstetrics, Labor and Delivery</b>
 <br>
 Pregnancy Complications
 <br>
