--- a/nervous.html
+++ b/nervous.html
@@ -11,7 +11,20 @@ Disturbances of Mood/Depressive Disorders
 <br>
 Cognitive Disturbances
 <br>
-Disturbances of Behavior and Perception
+<b>Disturbances of Behavior and Perception</b>
+  <br>
+  The major difference between psychoanalytical theories of human development and behavioral theories is that: <br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Behavioral theories rely on direct observation</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. There is no difference, they are the same</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Psychoanalytic theory relies on introspection</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Both A and C </label><br>
+</form> 
+Answer: <p style="color:white"> D - Psychoanalytic and behavioral theories differ over the way in which they are processed. Psychoanalyticists rely on personal story and introspection, while behavioralists rely on direct observation. <br></p>
 <br>
 Life Adjustment and Stressors
 <br>
