--- a/nervous.html
+++ b/nervous.html
@@ -30,6 +30,19 @@ Life Adjustment and Stressors
 <br>
 Disturbances of the Special Senses
 <br>
+  Which photoreceptor cells are responsible for color vision and help create very sharp images?<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Cones</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Rods</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Rhodopsin</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Cochlea</label><br>
+</form> 
+Answer: <p style="color:white"> Cones are the photoreceptor cells responsible for color vision and sharp images. Rods detect lightning, while rhodopsin is a photosensitive molecule within rods that respond to light.</p>
+<br>  <br>
 Headache
 <br>
 Speech and Language Disturbances
