--- a/nervous.html
+++ b/nervous.html
@@ -7,9 +7,9 @@
 <br>
 Anxiety
 <br>
-Disturbances of Mood/Depressive Disorders
+  <b>Disturbances of Mood/Depressive Disorders</b>
 <br>
-Cognitive Disturbances
+  <b>Cognitive Disturbances</b>
 <br>
 <b>Disturbances of Behavior and Perception</b>
   <br>
@@ -26,9 +26,9 @@ Cognitive Disturbances
 </form> 
 Answer: <p style="color:white"> D - Psychoanalytic and behavioral theories differ over the way in which they are processed. Psychoanalyticists rely on personal story and introspection, while behavioralists rely on direct observation. <br></p>
 <br>
-Life Adjustment and Stressors
+  <b>Life Adjustment and Stressors</b>
 <br>
-Disturbances of the Special Senses
+  <b>Disturbances of the Special Senses</b>
 <br>
   Which photoreceptor cells are responsible for color vision and help create very sharp images?<br>
   <form>
@@ -43,27 +43,40 @@ Disturbances of the Special Senses
 </form> 
 Answer: <p style="color:white"> Cones are the photoreceptor cells responsible for color vision and sharp images. Rods detect lightning, while rhodopsin is a photosensitive molecule within rods that respond to light.</p>
 <br>  <br>
-Headache
+  <b>Headache</b>
 <br>
-Speech and Language Disturbances
+  <b>Speech and Language Disturbances</b>
 <br>
-Movement Disturbances
+  <b>Movement Disturbances</b>
 <br>
-Seizures
+  <b>Seizures</b>
 <br>
-Sensory Disturbances and Pain
+  <b>Sensory Disturbances and Pain</b>
+  <br>
+  Psychotropic medications can cause destabilization of thermoregulation due to:<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Stimulation of the hypothalamus</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Brain stimulation</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Brain destimulation</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. None of the above</label><br>
+</form> 
+Answer: <p style="color:white"> Primary mental health chemical imbalances or treatment with psychotropic medication can alter calcium levels of the brain, which stimulate the hypothalamus and thus thermoregulation.</p>
 <br>
-Sleep Disturbances
+  <b>Sleep Disturbances</b>
 <br>
-Substance Abuse
+  <b>Substance Abuse</b>
 <br>
-Nervous System Trauma
+  <b>Nervous System Trauma</b>
 <br>
-Weakness and Paralysis
+  <b>Weakness and Paralysis</b>
 <br>
-Physical Exam Findings Related to the Nervous System and Mental Health
+  <b>Physical Exam Findings Related to the Nervous System and Mental Health</b>
 <br>
-Laboratory Test Findings and Diagnostic Imagining Related to the Nervous System and Mental Health
+<b>Laboratory Test Findings and Diagnostic Imagining Related to the Nervous System and Mental Health</b>
 <br>
 </body>
 </html>
