--- a/genitourinary.html
+++ b/genitourinary.html
@@ -5,13 +5,26 @@
 <body>
 <h1><center>Genitourinary/Renal System and Breasts</h1>
 <br>
-Anuria, Oliguria, Polyuria, and Edema
+  <b>Anuria, Oliguria, Polyuria, and Edema</b>
 <Br>
-Ensuresis/Incontinence, Prolapse and Pelvic Relaxation
+  <b>Ensuresis/Incontinence, Prolapse and Pelvic Relaxation</b>
 <br>
-Urinary Frequency/Hesitancy, Dysuria, Urinary Retention
+  <b>Urinary Frequency/Hesitancy, Dysuria, Urinary Retention</b>
 <br>
 Hematuria and Discolored Urine
+  <br>
+  Which of the following can cause alkaline urine?
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Respiratory acidosis</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. UTI</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Cranberry juice</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. None of the above</label><br>
+</form> 
+  Answer: <p style="color:white"> <i> E. coli</i> can make urine more acidic, but <i> Proteus</i> or <i>Pseudomonas</i> produce urease, which causes urine to be more alkaline. Respiratory acidosis can also cause acidic urine; alkalosis can also cause alkaline urine.</p>
 <br>
 Amenorrhea and Vaginal Bleeding
 <br>
