--- a/genitourinary.html
+++ b/genitourinary.html
@@ -11,7 +11,7 @@
 <br>
   <b>Urinary Frequency/Hesitancy, Dysuria, Urinary Retention</b>
 <br>
-Hematuria and Discolored Urine
+  <b>Hematuria and Discolored Urine</b>
   <br>
   Which of the following can cause alkaline urine?
   <form>
@@ -26,23 +26,36 @@ Hematuria and Discolored Urine
 </form> 
   Answer: <p style="color:white"> <i> E. coli</i> can make urine more acidic, but <i> Proteus</i> or <i>Pseudomonas</i> produce urease, which causes urine to be more alkaline. Respiratory acidosis can also cause acidic urine; alkalosis can also cause alkaline urine.</p>
 <br>
-Amenorrhea and Vaginal Bleeding
+  <b>Amenorrhea and Vaginal Bleeding</b>
 <br>
-Urethral Discharge
+  <b>Urethral Discharge</b>
 <br>
-Pelvic Pain
+  <b>Pelvic Pain</b>
 <br>
-Vulvar and Vaginal Discharge, Lesions, and Pain
+  <b>Vulvar and Vaginal Discharge, Lesions, and Pain</b>
 <Br>
-Penile, Scrotal, and Testicular Lesions, Masses, Pain, and Bleeding
+  <b>Penile, Scrotal, and Testicular Lesions, Masses, Pain, and Bleeding</b>
+  <br>
+  Which of the following conditions can gonorrhea cause if left untreated?
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. PID</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Epididymitis</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Both A and B</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Neither A nor B</label><br>
+</form> 
+Answer: <p style="color:white"> Untreated gonorrhea can cause PID in women and epididymitis in men. Routine testing is recommended because some patients do not notice their symptoms.</p>
 <br>
-Pelvic, Prostate, and Renal Masses
+  <b>Pelvic, Prostate, and Renal Masses</b>
 <br>
-Breast Masses, Discharge, and Pain
+  <b>Breast Masses, Discharge, and Pain</b>
 <br>
-Physical Exam Findings Related to the Genitourinary/Renal System and Breasts
+  <b>Physical Exam Findings Related to the Genitourinary/Renal System and Breasts</b>
 <Br>
-Laboratory Test Findings and Diagnostic Imaging Related to the Genitourinary/Renal System and Breasts
+<b>Laboratory Test Findings and Diagnostic Imaging Related to the Genitourinary/Renal System and Breasts</b>
 <br>
 </body>
 </html>
