--- a/nervous.html
+++ b/nervous.html
@@ -5,7 +5,7 @@
 <body>
 <h1><center>Nervous System and Mental Health</center></h1>
 <br>
-Anxiety
+  <b>Anxiety</b>
 <br>
   <b>Disturbances of Mood/Depressive Disorders</b>
 <br>
@@ -73,10 +73,52 @@ Answer: <p style="color:white"> Primary mental health chemical imbalances or tre
   <b>Nervous System Trauma</b>
 <br>
   <b>Weakness and Paralysis</b>
+  <br>
+  Which autoimmune condition is characterized by the body producing autoantibodies that attack muscle receptor sites, reducing the ability to receive neurotransmitter signals to move properly, thus causing weakness?<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Myasthenia gravis</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Muscular dystrophy</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Muscular degenerative disorder</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. None of the above</label><br>
+</form> 
+Answer: <p style="color:white"> MG is caused by the body producing autoantibodies against ACh receptors, causing inappropriate lack of response to stimulation. Muscular dystrophy is caused by a genetic deficiency of dystrophin, a major muscle component. Muscular degenerative disorder is a symptom-based category.</p>
 <br>
   <b>Physical Exam Findings Related to the Nervous System and Mental Health</b>
+  <br>
+  You are caring for an adult patient who is suspected to have upper neuronal damage. Which provocation do you perform? <br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Stroking the foot to elicit Babinski sign</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Finger to nose test to look for dysmetria</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Romberg test to look for Romberg's sign </label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Jendrassik maneuver with striking the knee to elicit patellar reflex </label><br>
+</form> 
+Answer: <p style="color:white"> A patient who has upper neuronal damage will demonstrate a positive Babinski sign, where the big toe extends and the rest of the toes fan out when the sole is stroked. A negative Babinski sign, normal in patients above 2 years of age, causes all toes to curl inward. <br>
+  A patient with cerebellar dysfunction may exhibit dysmetria, a lack of coordination, in the finger-to-nose test. Romberg's test is positive when a standing patient demonstrates imbalance when the eyes are closed and demonstrates sensory ataxia.<br> 
+  The Jendrassik maneuver, where the patient clenches their teeth, and interlocks flexed fingers, is used in combination with patellar reflex testing to elicit a stronger reaction from muscle tension increasing afferent activity.<br></p>
 <br>
-<b>Laboratory Test Findings and Diagnostic Imagining Related to the Nervous System and Mental Health</b>
+  Which of these correctly describes the Babinski maneuver?
+<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. In normal adults, all toes should curl inward when the sole is stroked.</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. In normal infants, all toes should curl inward when the sole is stroked.</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. In normal adults, all toes should fan outwards when the sole is stroked.</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. In normal infants, all toes should fan outwards when the sole is stroked.</label><br>
+</form> 
+Answer: <p style="color:white"> Normal infants and adults with upper neuronal damage will display a positive Babinski sign, where the big toe extends and the rest of the toes fan outward when the sole is stroked. In normal patients above two years of age, all toes will curl inward instead.</p>
+<br>
+  <b>Laboratory Test Findings and Diagnostic Imagining Related to the Nervous System and Mental Health</b>
 <br>
 </body>
 </html>
