--- a/blood.html
+++ b/blood.html
@@ -5,8 +5,9 @@
 <body>
 <h1><center>Circulatory and Hematologic Systems</title>
 <br>
-Cardiovascular Chest Pain
+  <b>Cardiovascular Chest Pain</b>
 <Br>
+  A patient tells you he has paroxysmic atrial fibrillation. Which symptoms would you expect him to report?
 <form>
   <input type="radio" id="A" name="1" value="A">
   <label for="male"> A. Occasionally, symptoms appear to come and go and not last more than an hour. </label><br>
@@ -19,6 +20,18 @@ Cardiovascular Chest Pain
 </form> 
 Answer: <p style="color:white">A - In medicine, when a condition is noted as paroxysmal, it means that the condition is not constant and that it occurs occasionally with symptoms that come and go and tend to not last that long. The symptoms and condition may resolve themselves without medical intervention. Medical intervention can shorten the symptoms and/or decrease the amount of times the symptoms occur.</p>
   <br>
+  When a patient has inadequate blood supply to the heart, what is the resulting chest pain called?
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. CVA </label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. TIA </label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Angina</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. IVC</label><br>
+</form> 
+Answer: <p style="color:white"> Angina is the chest pain resulting from insufficient blood supply to the heart and is treated by vasodilators such as nitroglycerin.</p>
   <br>
 Palpitations/Rhythm Disturbances
 <br>
