--- a/nervous.html
+++ b/nervous.html
@@ -71,6 +71,19 @@ Answer: <p style="color:white"> Primary mental health chemical imbalances or tre
   <b>Substance Abuse</b>
 <br>
   <b>Nervous System Trauma</b>
+  <br>
+  Disorders of the nervous system resulting from a tumor in a different area of the body are known as: <br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Comorbidity </label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Secondary neurological disorder</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Neuritis</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Paraneoplastic syndrome</label><br>
+</form> 
+Answer: <p style="color:white"> Some tumors cause an autoantibody immune response. These antibodies often not only attack the tumor, but also attack a portion of the nervous system not related to the tumor. These conditions are known as paraneoplastic syndrome and may be distant or apparently unrelated to the tumor site.</p>
 <br>
   <b>Weakness and Paralysis</b>
   <br>
