--- a/CHPPRW.html
+++ b/CHPPRW.html
@@ -6,6 +6,19 @@
 <h1><center>Community Health and Patient Presentations Related to Wellness</center></h1>
 <br>
 <h2>End of life</h2>
+  <br>
+  Which of the following is not one of the key steps in the grief process?<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Denial </label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Anger </label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Bargaining </label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Rejection </label><br>
+</form> 
+Answer: <p style="color:white"> The 5 stages include denial, anger, bargaining, depression, and acceptance. Rejection is not one of the formal stages.</p>
 <br>
 <h2>Patient safety</h2>
 <br>
