--- a/nervous.html
+++ b/nervous.html
@@ -26,6 +26,22 @@
 </form> 
 Answer: <p style="color:white"> D - Psychoanalytic and behavioral theories differ over the way in which they are processed. Psychoanalyticists rely on personal story and introspection, while behavioralists rely on direct observation. <br></p>
 <br>
+  Which of the following matches the definition: covering up a weakness by stressing a desirable or stronger trait? <br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Compensation</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Projection</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Rationalization</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Dysphoria</label><br>
+</form> 
+Answer: <p style="color:white"> Compensation is defined as covering up a weakness by stressing a desirable or stronger trait.<br>
+  Projection is the ego defends itself against unconscious impulses or qualities by attributing them to others instead of the self (blame shifting). <br>
+  Rationalization is the action of attempting to explain or justify behavior or an attitude with logical reasons, even if these are not appropriate, to avoid the true explanation and made tolerable by plausible means.<br>
+  Dysphoria is defined as a generalized sense of unease.<br>
+  </p>
   <b>Life Adjustment and Stressors</b>
 <br>
   <b>Disturbances of the Special Senses</b>
@@ -67,6 +83,19 @@ Answer: <p style="color:white"> Cones are the photoreceptor cells responsible fo
 Answer: <p style="color:white"> Primary mental health chemical imbalances or treatment with psychotropic medication can alter calcium levels of the brain, which stimulate the hypothalamus and thus thermoregulation.</p>
 <br>
   <b>Sleep Disturbances</b>
+  <br>
+  Which of the following waveforms is most commonly found with light sleepers?<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Theta</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Alpha</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Beta</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Zeta</label><br>
+</form> 
+Answer: <p style="color:white"> Beta waves are typically found in awake, conscious individuals. Alpha waves are typically found in light, NREM sleep. Theta waves are found in Stage 2 NREM sleep, along with sleep spindles and K-complexes. Delta waves are found in stage 3 and 4 NREM. </p>
 <br>
   <b>Substance Abuse</b>
 <br>
