--- a/development.html
+++ b/development.html
@@ -9,19 +9,32 @@
 <br>
 <b>Aging Milestones</b>
 <br>
-
+When can an infant first sit up independently?
   <form>
   <input type="radio" id="A" name="1" value="A">
-  <label for="male"> A. </label><br>
+  <label for="male"> A. 4 months of age</label><br>
   <input type="radio" id="B" name="1" value="B">
-  <label for="female"> B. </label><br>
+  <label for="female"> B. 6 months of age</label><br>
   <input type="radio" id="C" name="1" value="C">
-  <label for="other"> C. </label><br>
+  <label for="other"> C. 8 months of age</label><br>
   <input type="radio" id="D" name="1" value="D">
-  <label for="other"> D. </label><br>
+  <label for="other"> D. 10 months of age</label><br>
 </form> 
-Answer: <p style="color:white"> </p>
+Answer: <p style="color:white">Most babies can sit up somewhere between 7-9 months of age. </p>
   <br>
+  When does object permanence develop for toddlers?
+  <br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. 5-10 months </label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. 10-14 months</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. 12-24 months</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. 15-24 months</label><br>
+</form> 
+Answer: <p style="color:white"> Children can form object permanence near 8 months of age.</p><br>
   <b>Developmental Delay</b>
 <br>
   <b>Congenital Anomalies, Malformations, Primary and Acquired Immunodeficiency Disorders</b>
