--- a/nervous.html
+++ b/nervous.html
@@ -9,6 +9,19 @@
 <br>
   <b>Disturbances of Mood/Depressive Disorders</b>
 <br>
+  Which of the following matches the definition: response to severe emotional stress resulting in voluntary disturbance of physical functions?<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Conversion disorder</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Depressive reaction</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Bipolar disorder</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Alzheimer's Disease </label><br>
+</form> 
+Answer: <p style="color:white"> Conversion disorder (functional neurological disorder) or somatic symptom disorder are both somatoform disorders or somatic system and related disorders. Conversion disorder is the unconscious and nonvolitionary development of neurologic symptoms or deficits, generally motor or sensory functions, incompatible with known pathophysiologic mechanisms or anatomic pathways. Somatic symptom disorder is characterized by multiple persistent physical complaints associated with excessive and maladaptive thoughts, feelings, and behaviors related to those symptoms. Depressive reaction is situational depression. Bipolar disorder is characterized by periods of extreme mood shifts lasting weeks or months. Alzheimer's disease is a generalized degeneration of the brain, causing premature senility.</p>
+  <br>
   <b>Cognitive Disturbances</b>
 <br>
 <b>Disturbances of Behavior and Perception</b>
@@ -97,6 +110,19 @@ Answer: <p style="color:white"> Primary mental health chemical imbalances or tre
 </form> 
 Answer: <p style="color:white"> Beta waves are typically found in awake, conscious individuals. Alpha waves are typically found in light, NREM sleep. Theta waves are found in Stage 2 NREM sleep, along with sleep spindles and K-complexes. Delta waves are found in stage 3 and 4 NREM. </p>
 <br>
+  REM sleep cycles occur approximately every
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. 45 minutes</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. 60 minutes</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. 75 minutes</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. 90 minutes</label><br>
+</form> 
+Answer: <p style="color:white"> Sleep cycles typically last 90-120 minutes.</p>
+  <br>
   <b>Substance Abuse</b>
 <br>
   <b>Nervous System Trauma</b>
