--- a/USMLE.html
+++ b/USMLE.html
@@ -7,26 +7,26 @@
 <br>
 <h2><a href="aging.html"> Aging </a href>
 <br>
-<a href="anatomy.html"> Anatomy </a href>
+  <h2><a href="anatomy.html"> Anatomy </a href></h2>
 <br>
-<a href="behavioral.html"> Behavioral Sciences </a href>
+  <h2><a href="behavioral.html"> Behavioral Sciences </a href></h2>
 <br>
-<a href="biostats.html"> Biostatistics and Epidemiology </a href>
+  <h2><a href="biostats.html"> Biostatistics and Epidemiology </a href></h2>
 <br>
-<a href="genetics.html"> Genetics </a href>
+  <h2><a href="genetics.html"> Genetics </a href></h2>
 <br>
-<a href="immunology.html"> Immunology </a href>
+<h2><a href="immunology.html"> Immunology </a href></h2>
 <br>
-<a href="microbiology.html"> Microbiology </a href>
+  <h2><a href="microbiology.html"> Microbiology </a href></h2>
 <br>
-<a href="MCB.html"> Molecular and Cell Biology </a href>
+  <h2><a href="MCB.html"> Molecular and Cell Biology </a href></h2>
 <br>
-<a href="nutrition.html"> Nutrition </a href>
+  <h2><a href="nutrition.html"> Nutrition </a href></h2>
 <br>
-<a href="pathology.html"> Pathology </a href>
+  <h2><a href="pathology.html"> Pathology </a href></h2>
 <br>
-<a href="pharmacology.html"> Pharmacology </a href>
+  <h2><a href="pharmacology.html"> Pharmacology </a href></h2>
 <br>
-<a href="physiology.html"> Physiology </a href>
+  <h2><a href="physiology.html"> Physiology </a href></h2>
 </body>
 </html>
