--- a/MCB.html
+++ b/MCB.html
@@ -4,5 +4,12 @@
 </head>
 <body>
 <h1><center>Molecular and Cell Biology</center></h1>
+<br>
+  <b>Biochemistry and molecular biology</b><br>
+  <i> Gene expression: DNA structure, replication, exchange, and epigenetics (eg, imprinting, Xactivation, DNA methylation)</i><br>
+  <i> Gene expression: transcription<i> <br>
+<i> Gene expression: translation, post-translational processing, modifications, and disposition of proteins (degradation), including protein/glycoprotein synthesis, intra-extracellular sorting, and processes/functions related to Golgi complex and rough endoplasmic reticulum </i><br>
+<i>Structure and function of proteins and enzymes (eg, enzyme kinetics and structural/regulatory proteins)</i><br>
+    <i>Energy metabolism (eg, ATP generation, transport chain)</i><br>
 </body>
 </html>
