--- a/MCB.html
+++ b/MCB.html
@@ -10,6 +10,34 @@
   <i> Gene expression: transcription<i> <br>
 <i> Gene expression: translation, post-translational processing, modifications, and disposition of proteins (degradation), including protein/glycoprotein synthesis, intra-extracellular sorting, and processes/functions related to Golgi complex and rough endoplasmic reticulum </i><br>
 <i>Structure and function of proteins and enzymes (eg, enzyme kinetics and structural/regulatory proteins)</i><br>
-    <i>Energy metabolism (eg, ATP generation, transport chain)</i><br>
+    <i> Energy metabolism (eg, ATP generation, transport chain)</i><br>
+    <b> Biology of cells</b><br>
+    <i> Adaptive cell responses and cellular homeostasis (eg, hypertrophy)</i><br>
+    <i> Mechanisms of injury and necrosis, including pathologic processes (eg, liquefactive necrosis, free radical formation)</i><br>
+    <i> Apoptosis</i>
+    <i> Cell cycle and cell cycle regulation (eg, mitosis)</i><br>
+    <i> Mechanisms of dysregulation</i><br>
+    <i> Cell biology of cancer (eg, role of p53, proto-oncogenes)</i><br>
+    <i> General principles of invasion and metastasis, including cancer staging</i> <br>
+<i> Cell/tissue structure, regulation, and function, including cytoskeleton, organelles, glycolipids, channels, gap junctions, extracellular matrix, and receptors</i><br>
+    <b>Human development and genetics</b><br>
+    <i>Principles of pedigree analysis</i><br>
+    <i> Inheritance patterns</i><br>
+    <i> Occurrence and recurrence risk determination </i> <br>
+    <i> Population genetics: Hardy-Weinberg law, founder effects, mutation-selection equilibrium</i><br>
+    <i> Principles of gene therapy</i><br>
+    <i> Genetic testing and counseling</i><br>
+    <i> Genetic mechanisms (eg, penetrance, genetic heterogeneity) </i><br>
+    <b> Biology of tissue response to disease</b><br>
+    <i> Acute inflammatory responses (patterns of response)</i><br>
+    <i> Acute inflammation and mediator systems (eg, histamine, prostaglandins, bradykinins, eosinophilic basic protein, nitric oxide) </i><br>
+    <i> Vascular response to injury, including mediators</i>
+<i>Principles of cell adherence and migration (eg, ECAMs, selectins, leukocytic diapedesis, and rolling)</i><br>
+    <i>Microbicidal mechanisms and tissue injury (eg, defensins)</i><br>
+    <i>Clinical manifestations (eg, pain, fever, leukocytosis, leukemoid reaction, chills)</i><br>
+    <i>Chronic inflammatory responses (eg, tumor necrosis factor)</i><br>
+    <i>Reparative processes</i>
+<i>Wound healing, repair: thrombosis, granulation tissue, angiogenesis, fibrosis,scar/keloid formation </i><br>
+    <i>Regenerative process </i><br>
 </body>
 </html>
