--- a/pharmacology.html
+++ b/pharmacology.html
@@ -4,5 +4,15 @@
 </head>
 <body>
 <h1><center>Pharmacology</center></h1>
+<br>
+  <h2>Pharmacodynamic and pharmacokinetic processes: general principles</h2><br>
+  <i> Pharmacokinetics: absorption, distribution, metabolism, excretion, dosage intervals</i><br>
+  <i> Mechanisms of drug action, structure-activity relationships (eg, anticancer drugs) </i><br>
+<i> Concentration and dose-effect relationships (eg, efficacy, potency), types of agonists (eg, full, partial, inverse) and antagonists and their actions</i><br>
+<i> Individual factors altering pharmacokinetics and pharmacodynamics (eg, age, gender, disease, tolerance, compliance, body weight, metabolic proficiency, pharmacogenetics)</i><br>
+  <i> Mechanisms of drug adverse effects, overdosage, toxicology</i><br>
+  <i> Mechanisms of drug interactions</i><br>
+  <i> Signal transduction, including structure/function of all components of signal transduction</i>
+  <i> Pathways such as receptors, ligands (eg, general principles of nitric oxide, autocrine and paracrine signaling)</i><br>
 </body>
 </html>
