--- a/microbiology.html
+++ b/microbiology.html
@@ -4,5 +4,28 @@
 </head>
 <body>
 <h1><center>Microbiology</center></h1>
+  <br>
+  <h2>Microbial biology</h2><br>
+  Microbial identification and classification, including principles, microorganism identification, and non-immunologic laboratory diagnosis<br>
+  <b>Bacteria</b><br>
+  <i>Structure (eg, cell walls, composition, appendages, virulence factors, extracellular products, toxins, mechanism of action of toxins)</i><br>
+  <i>Processes, replication, and genetics (eg, metabolism, growth, and regulation)</i><br>
+  <i>Oncogenesis</i><br>
+<i>Antibacterial agents (eg, mechanisms of action on organism, toxicity to humans, and mechanisms of resistance)</i><br>
+    <b>Viruses</b>
+  <i>Structure (eg, physical and chemical properties, virulence factors)</i>
+  <i>Processes, replication, and genetics (eg, life cycles, location of virus in latent infection)</i><br>
+  <i>Oncogenesis</i><br>
+<i>Antiviral agents (eg, mechanisms of action on virus, toxicity to humans, and mechanisms of resistance)</i><br>
+<b>Fungi<b><br>
+<i>Structure (eg, cell wall, composition, appendages, virulence factors, extracellular products, toxins, mechanisms of action of toxins)</i><br>
+  <i>Processes, replication, and genetics (eg, asexual vs. sexual, metabolism, growth)</i><br>
+<i>Antifungal agents (eg, mechanisms of action on fungus, toxicity to humans, and mechanisms of resistance)</i><br>
+  <b>Parasites</b><br>
+  <i>Structure (eg, appendages, macroscopic features, and virulence factors)</i><br>
+  <i>Processes, replication, and genetics (eg, life cycles, metabolism, and growth)</i><br>
+  <i>Oncogenesis</i>
+<i>Antiparasitic agents (eg, mechanisms of action on parasite, toxicity to humans, and mechanisms of resistance)</i><br>
+  <b>Prions</b><br>
 </body>
 </html>
