--- a/microbiology.html
+++ b/microbiology.html
@@ -17,7 +17,7 @@
   <i>Processes, replication, and genetics (eg, life cycles, location of virus in latent infection)</i><br>
   <i>Oncogenesis</i><br>
 <i>Antiviral agents (eg, mechanisms of action on virus, toxicity to humans, and mechanisms of resistance)</i><br>
-<b>Fungi<b><br>
+<b>Fungi</b><br>
 <i>Structure (eg, cell wall, composition, appendages, virulence factors, extracellular products, toxins, mechanisms of action of toxins)</i><br>
   <i>Processes, replication, and genetics (eg, asexual vs. sexual, metabolism, growth)</i><br>
 <i>Antifungal agents (eg, mechanisms of action on fungus, toxicity to humans, and mechanisms of resistance)</i><br>
