--- a/microbiology.html
+++ b/microbiology.html
@@ -12,7 +12,7 @@
   <i>Processes, replication, and genetics (eg, metabolism, growth, and regulation)</i><br>
   <i>Oncogenesis</i><br>
 <i>Antibacterial agents (eg, mechanisms of action on organism, toxicity to humans, and mechanisms of resistance)</i><br>
-    <b>Viruses</b>
+    <b>Viruses</b><br>
   <i>Structure (eg, physical and chemical properties, virulence factors)</i>
   <i>Processes, replication, and genetics (eg, life cycles, location of virus in latent infection)</i><br>
   <i>Oncogenesis</i><br>
